test/tests/errors/error-function-no-rec.sm
// true
// false
/**/
/**/

program {
    func sum(x) {
        x == 0 ? 0 : x + sum(x - 1)
    }
    output sum(5);
}